--- a/prueba.ui
+++ b/prueba.ui
@@ -10,6 +10,12 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="maximumSize">
    <size>
     <width>800</width>
@@ -23,112 +29,175 @@
    <string notr="true">background-color: qlineargradient(spread:pad, x1:0.414, y1:1, x2:0.46, y2:0, stop:0 rgba(55, 155, 255, 255), stop:1 rgba(255, 255, 255, 255));</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="layoutWidget">
+   <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>100</y>
-      <width>291</width>
-      <height>122</height>
+      <x>10</x>
+      <y>50</y>
+      <width>311</width>
+      <height>31</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item alignment="Qt::AlignHCenter">
-      <widget class="QLabel" name="lblClientes">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLabel" name="lblDNI">
        <property name="font">
         <font>
-         <pointsize>15</pointsize>
-         <underline>true</underline>
+         <pointsize>14</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
         </font>
        </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: qlineargradient(spread:pad, x1:0.011, y1:1, x2:0.358, y2:0, stop:0 rgba(0, 170, 255, 255), stop:1 rgba(255, 255, 255, 255))</string>
-       </property>
        <property name="text">
-        <string>XESTIÓN CLIENTES</string>
+        <string>DNI: </string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="txtDatos"/>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btnAceptar">
+      <widget class="QLineEdit" name="txtDNI">
        <property name="font">
         <font>
-         <pointsize>13</pointsize>
+         <pointsize>14</pointsize>
         </font>
-       </property>
-       <property name="text">
-        <string>Aceptar</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="btnSalir">
+      <widget class="QLabel" name="lblValidoDNI">
+       <property name="minimumSize">
+        <size>
+         <width>25</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="font">
         <font>
-         <pointsize>13</pointsize>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>Salir</string>
+        <string/>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
-   <widget class="QLabel" name="lblDNI">
+   <widget class="QWidget" name="horizontalLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>300</y>
-      <width>51</width>
-      <height>41</height>
+      <x>10</x>
+      <y>100</y>
+      <width>661</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLabel" name="lblApel">
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Apellidos</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="txtApel">
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+        </font>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="lblNome">
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Nome</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="txtNome">
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+        </font>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QPushButton" name="btnAceptar">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>150</y>
+      <width>289</width>
+      <height>29</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <pointsize>13</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>DNI: </string>
+     <string>Aceptar</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="txtDNI">
+   <widget class="QPushButton" name="btnSalir">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>300</y>
-      <width>201</width>
-      <height>41</height>
+      <x>370</x>
+      <y>150</y>
+      <width>289</width>
+      <height>29</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lblValidoDNI">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>300</y>
-      <width>47</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
+      <pointsize>13</pointsize>
      </font>
     </property>
     <property name="text">
-     <string/>
+     <string>Salir</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblClientes">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>0</y>
+      <width>171</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: qlineargradient(spread:pad, x1:0.011, y1:1, x2:0.358, y2:0, stop:0 rgba(0, 170, 255, 255), stop:1 rgba(255, 255, 255, 255))</string>
+    </property>
+    <property name="text">
+     <string>XESTIÓN CLIENTES</string>
     </property>
    </widget>
   </widget>
