Añadimos a la tabla los pagos, que no pueda guardarse con Dni mal y el QMessageBox.

--- a/prueba.ui
+++ b/prueba.ui
@@ -1004,6 +1004,11 @@
     </property>
     <column>
      <property name="text">
+      <string>DNI</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
       <string>Apellidos</string>
      </property>
     </column>
@@ -1070,11 +1075,11 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="rbtGroupSex"/>
   <buttongroup name="chkGroupPago">
    <property name="exclusive">
     <bool>false</bool>
    </property>
   </buttongroup>
+  <buttongroup name="rbtGroupSex"/>
  </buttongroups>
 </ui>
