--- a/prueba.ui
+++ b/prueba.ui
@@ -137,8 +137,8 @@
       <property name="font">
        <font>
         <pointsize>12</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
+        <weight>50</weight>
+        <bold>false</bold>
        </font>
       </property>
       <property name="title">
@@ -353,9 +353,9 @@
       <widget class="QWidget" name="horizontalLayoutWidget_7">
        <property name="geometry">
         <rect>
-         <x>552</x>
+         <x>532</x>
          <y>50</y>
-         <width>221</width>
+         <width>241</width>
          <height>26</height>
         </rect>
        </property>
@@ -385,7 +385,7 @@
          <widget class="QLineEdit" name="txtAltaCli">
           <property name="maximumSize">
            <size>
-            <width>100</width>
+            <width>120</width>
             <height>19</height>
            </size>
           </property>
