Preparamos los backups

--- a/prueba.ui
+++ b/prueba.ui
@@ -1550,7 +1550,15 @@
     <addaction name="separator"/>
     <addaction name="actionSalir"/>
    </widget>
+   <widget class="QMenu" name="menuHerramientas">
+    <property name="title">
+     <string>Herramientas</string>
+    </property>
+    <addaction name="actionCrear_Backup"/>
+    <addaction name="actionRestaurar_Backup"/>
+   </widget>
    <addaction name="menuArchivo"/>
+   <addaction name="menuHerramientas"/>
   </widget>
   <action name="actionAbrir">
    <property name="text">
@@ -1578,6 +1586,16 @@
   <action name="action_Abrir">
    <property name="text">
     <string>Abrir</string>
+   </property>
+  </action>
+  <action name="actionCrear_Backup">
+   <property name="text">
+    <string>Crear Backup</string>
+   </property>
+  </action>
+  <action name="actionRestaurar_Backup">
+   <property name="text">
+    <string>Restaurar base de datos</string>
    </property>
   </action>
  </widget>
