Creamos la barra de herramientas con actions de salir, abrir, backups e imprimir

--- a/prueba.ui
+++ b/prueba.ui
@@ -1548,6 +1548,8 @@
     </property>
     <addaction name="action_Abrir"/>
     <addaction name="separator"/>
+    <addaction name="actionImprimir"/>
+    <addaction name="separator"/>
     <addaction name="actionSalir"/>
    </widget>
    <widget class="QMenu" name="menuHerramientas">
@@ -1559,6 +1561,22 @@
    </widget>
    <addaction name="menuArchivo"/>
    <addaction name="menuHerramientas"/>
+  </widget>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionBarSalir"/>
+   <addaction name="actionabrirCarpeta"/>
+   <addaction name="actionHacerBackup"/>
+   <addaction name="actionRestaurarBackup"/>
+   <addaction name="actionBarImpresora"/>
   </widget>
   <action name="actionAbrir">
    <property name="text">
@@ -1596,6 +1614,59 @@
   <action name="actionRestaurar_Backup">
    <property name="text">
     <string>Restaurar base de datos</string>
+   </property>
+  </action>
+  <action name="actionBarSalir">
+   <property name="icon">
+    <iconset>
+     <normaloff>img/sair.png</normaloff>img/sair.png</iconset>
+   </property>
+   <property name="text">
+    <string>BarSalir</string>
+   </property>
+  </action>
+  <action name="actionabrirCarpeta">
+   <property name="icon">
+    <iconset>
+     <normaloff>img/abrirArchivo.png</normaloff>img/abrirArchivo.png</iconset>
+   </property>
+   <property name="text">
+    <string>abrirCarpeta</string>
+   </property>
+  </action>
+  <action name="actionHacerBackup">
+   <property name="icon">
+    <iconset>
+     <normaloff>img/subirNube.png</normaloff>img/subirNube.png</iconset>
+   </property>
+   <property name="text">
+    <string>HacerBackup</string>
+   </property>
+  </action>
+  <action name="actionRestaurarBackup">
+   <property name="icon">
+    <iconset>
+     <normaloff>img/bajarNube.png</normaloff>img/bajarNube.png</iconset>
+   </property>
+   <property name="text">
+    <string>RestaurarBackup</string>
+   </property>
+  </action>
+  <action name="actionBarImpresora">
+   <property name="icon">
+    <iconset>
+     <normaloff>img/impresora.png</normaloff>img/impresora.png</iconset>
+   </property>
+   <property name="text">
+    <string>BarImpresora</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+P</string>
+   </property>
+  </action>
+  <action name="actionImprimir">
+   <property name="text">
+    <string>Imprimir</string>
    </property>
   </action>
  </widget>
